# youtube-upload

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: code-style.yaml  pr-tests.yaml  release-pypi-package.yaml
docs/: index.md
examples/: split_video_for_youtube.sh
scripts/: verify_e2e.py
tests/: __init__.py  test_auth.py  test_metadata.py  test_review_fixes.py  test_smoke.py  test_upload_retry.py
youtube_upload/: __init__.py  __main__.py  categories.py  lib.py  main.py  playlists.py  upload_video.py
youtube_upload/auth/: __init__.py
