# https://hatch.pypa.io/latest/config/build/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["youtube_upload"]

[project]
name = "youtube-upload"
version = "0.9.0"
description = "Upload videos to YouTube from the command line"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [
    { name = "Arnau Sanchez", email = "pyarnau@gmail.com" },
    { name = "ericmjl" },
]
maintainers = [
    { name = "ericmjl" },
]
keywords = ["youtube", "upload", "video", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "httplib2>=0.20",
    "tqdm>=4.0",
    "tenacity>=8.0",
]

[project.urls]
Homepage = "https://github.com/ericmjl/youtube-upload"
upstream = "https://github.com/tokland/youtube-upload"
Issues = "https://github.com/ericmjl/youtube-upload/issues"

[project.scripts]
youtube-upload = "youtube_upload.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.6",
    "pre-commit>=3",
    "interrogate>=1.5",
    "pydoclint>=0.3",
    "hatch>=1.0",
]

# The version is declared statically above ([project].version) so the uv-based
# release workflow can bump it with `uv version`. ``youtube_upload.__init__``
# mirrors this value at runtime via ``importlib.metadata``.

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/ for a list of rules.
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.interrogate]
fail-under = 60
ignore-init-module = true
exclude = ["setup.py", "docs", "build", "examples", "tests"]
ignore-regex = ["^get$", "^mock_.*"]

[tool.pydoclint]
style = "sphinx"
exclude = '\.git|\.tox|tests'
require-return-section-when-returning-nothing = false
arg-type-hints-in-docstring = false
check-return-types = false
